[package]
name = "skipidy"
version = "0.2.1"
edition = "2024"

description = "A skiplist implementation"
categories = ["data-structures"]
keywords = ["collection", "skiplist", "sorted"]

repository = "https://gitlab.com/ltungv/skipidy"
license = "MIT"

[[bench]]
name = "criterion"
harness = false

[dependencies]
rand = "0.9.2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
skiplist = "0.6.0"
